[build-system]
build-backend = "cmeel"
requires = ["cmeel[build]", "numpy >=1.23, <1.25"]

[project]
dependencies = ["numpy >=1.23, <1.25"]
description = "cmeel distribution for boost, which provides free peer-reviewed portable C++ source libraries."
license = "BSL-1.0"
name = "cmeel-boost"
requires-python = ">= 3.8"
version = "1.82.0"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-boost"
repository = "https://github.com/cmake-wheel/cmeel-boost.git"

[tool.cmeel]
build-number = 1
run-tests = false

[tool.tomlsort]
all = true
